fix MIN_BLOCKS_FOR_PIPELINE_RUN Bsc performance metrics (#4) add live sync overall performance metrics (#5) * add live sync performance metrics implementation * add block insert total time and remove fcu metrics feat: add metrics for account trie hash feat: rich node iter metrics fix prewarm proofs (#2) * fix prewarm proofs * Revert "feat: rich node iter metrics"

--- a/crates/stages/stages/Cargo.toml
+++ b/crates/stages/stages/Cargo.toml
@@ -39,6 +39,7 @@ reth-stages-api.workspace = true
 reth-static-file-types.workspace = true
 reth-trie = { workspace = true, features = ["metrics"] }
 reth-trie-db = { workspace = true, features = ["metrics"] }
+reth-metrics.workspace = true
 
 reth-testing-utils = { workspace = true, optional = true }
 
@@ -64,6 +65,7 @@ blake3.workspace = true
 reqwest = { workspace = true, default-features = false, features = ["rustls-tls-native-roots", "blocking"] }
 serde = { workspace = true, features = ["derive"] }
 eyre.workspace = true
+metrics.workspace = true
 
 [dev-dependencies]
 # reth
