--- a/crates/triedb/pathdb/Cargo.toml
+++ b/crates/triedb/pathdb/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "PathDB implementation for RocksDB integration"
 
-[workspace]
-
 [dependencies]
+# reth
+reth-triedb-common = { path = "../common" }
+
+# alloy
+alloy-primitives = "1.3.0"
+
 # RocksDB
 rocksdb = "0.21"
 
