--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,9 +139,10 @@ members = [
     "crates/trie/sparse-parallel/",
     "crates/trie/trie",
     "crates/triedb/common",
-    "crates/triedb/memorydb",
-    "crates/triedb/pathdb",
+    "crates/triedb/db/memorydb",
+    "crates/triedb/db/pathdb",
     "crates/triedb/state-trie",
+    "crates/triedb/smoke-test",
     "examples/beacon-api-sidecar-fetcher/",
     "examples/beacon-api-sse/",
     "examples/bsc-p2p",
@@ -454,8 +455,8 @@ reth-trie-parallel = { path = "crates/trie/parallel" }
 reth-trie-sparse = { path = "crates/trie/sparse", default-features = false }
 reth-trie-sparse-parallel = { path = "crates/trie/sparse-parallel" }
 reth-triedb-common = { path = "crates/triedb/common" }
-reth-triedb-memorydb = { path = "crates/triedb/memorydb" }
-reth-triedb-pathdb = { path = "crates/triedb/pathdb" }
+reth-triedb-memorydb = { path = "crates/triedb/db/memorydb" }
+reth-triedb-pathdb = { path = "crates/triedb/db/pathdb" }
 reth-triedb-state-trie = { path = "crates/triedb/state-trie" }
 reth-zstd-compressors = { path = "crates/storage/zstd-compressors", default-features = false }
 reth-ress-protocol = { path = "crates/ress/protocol" }
