--- a/crates/triedb/state-trie/Cargo.toml
+++ b/crates/triedb/state-trie/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 
 [dependencies]
 # reth
-reth-primitives-traits.workspace = true
+# reth-primitives-traits.workspace = true
 reth-triedb-memorydb.workspace = true
 reth-triedb-pathdb.workspace = true
 reth-triedb-common.workspace = true
@@ -21,17 +21,23 @@ reth-triedb-common.workspace = true
 # alloy
 alloy-primitives.workspace = true
 alloy-rlp.workspace = true
-alloy-consensus.workspace = true
+alloy-trie.workspace = true
 
 # misc
 auto_impl.workspace = true
 thiserror.workspace = true
 rayon = "1.8"
+arbitrary = { version = "1.0", optional = true }
+rand = "0.8"
+
+[features]
+# serde = ["alloy-primitives/serde"]
+arbitrary = ["dep:arbitrary"]
 
 [dev-dependencies]
 # reth
-reth-primitives-traits = { workspace = true, features = ["test-utils"] }
-reth-trie = { workspace = true, features = ["test-utils"] }
+# reth-primitives-traits = { workspace = true, features = ["test-utils"] }
+# reth-trie = { workspace = true, features = ["test-utils"] }
 
 # misc
 pretty_assertions.workspace = true
