--- a/crates/triedb/state-trie/Cargo.toml
+++ b/crates/triedb/state-trie/Cargo.toml
@@ -29,6 +29,7 @@ thiserror.workspace = true
 rayon = "1.8"
 arbitrary = { version = "1.0", optional = true }
 rand = "0.8"
+hex = "0.4"
 
 [features]
 # serde = ["alloy-primitives/serde"]
