opt: add triedb to tree handler

--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -37,6 +37,8 @@ reth-trie.workspace = true
 
 # rust-eth-triedb-state-trie
 rust-eth-triedb-state-trie.workspace = true
+rust-eth-triedb.workspace = true
+rust-eth-triedb-pathdb.workspace = true
 
 # alloy
 alloy-evm.workspace = true
