--- a/crates/storage/db-common/Cargo.toml
+++ b/crates/storage/db-common/Cargo.toml
@@ -26,6 +26,7 @@ reth-execution-errors.workspace = true
 
 # rust-eth-triedb
 rust-eth-triedb-state-trie.workspace = true
+rust-eth-triedb.workspace = true
 
 # eth
 alloy-consensus.workspace = true
