--- a/Cargo.toml
+++ b/Cargo.toml
@@ -708,7 +708,18 @@ visibility = "0.1.1"
 walkdir = "2.3.3"
 vergen-git2 = "1.0.5"
 
-# [patch.crates-io]
+[patch.crates-io]
+revm = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-bytecode = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-database = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-state = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-primitives = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-interpreter = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-inspector = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-context = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-context-interface = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+revm-database-interface = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
+op-revm = { git = "https://github.com/bnb-chain/revm", rev = "76a0eb54c81925bccf2037d7428efe4582cef82e" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
