--- a/Cargo.toml
+++ b/Cargo.toml
@@ -720,6 +720,8 @@ revm-context = { git = "https://github.com/bnb-chain/revm", branch = "si_test" }
 revm-context-interface = { git = "https://github.com/bnb-chain/revm", branch = "si_test" }
 revm-database-interface = { git = "https://github.com/bnb-chain/revm", branch = "si_test" }
 op-revm = { git = "https://github.com/bnb-chain/revm", branch = "si_test" }
+revm-precompile = { git = "https://github.com/bnb-chain/revm", branch = "si_test" }
+revm-handler = { git = "https://github.com/bnb-chain/revm", branch = "si_test" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
