feat: add total_difficulty and milli_timestamp fields for block header

--- a/crates/rpc/rpc-convert/Cargo.toml
+++ b/crates/rpc/rpc-convert/Cargo.toml
@@ -42,9 +42,14 @@ jsonrpsee-types.workspace = true
 # error
 thiserror.workspace = true
 
+# serialization
+serde = { workspace = true, features = ["derive"], optional = true }
+
 [features]
-default = []
+default = ["serde"]
+serde = ["dep:serde"]
 op = [
+    "dep:serde",
     "dep:op-alloy-consensus",
     "dep:op-alloy-rpc-types",
     "dep:op-alloy-network",
