--- a/crates/rpc/rpc-convert/Cargo.toml
+++ b/crates/rpc/rpc-convert/Cargo.toml
@@ -25,6 +25,7 @@ alloy-signer.workspace = true
 alloy-consensus.workspace = true
 alloy-network.workspace = true
 alloy-json-rpc.workspace = true
+alloy-serde.workspace = true
 
 # optimism
 op-alloy-consensus = { workspace = true, optional = true }
@@ -44,10 +45,11 @@ thiserror.workspace = true
 
 # serialization
 serde = { workspace = true, features = ["derive"], optional = true }
+serde_json = { workspace = true, optional = true }
 
 [features]
 default = ["serde"]
-serde = ["dep:serde"]
+serde = ["dep:serde", "dep:serde_json"]
 op = [
     "dep:serde",
     "dep:op-alloy-consensus",
