--- a/crates/rpc/rpc-convert/Cargo.toml
+++ b/crates/rpc/rpc-convert/Cargo.toml
@@ -25,7 +25,6 @@ alloy-signer.workspace = true
 alloy-consensus.workspace = true
 alloy-network.workspace = true
 alloy-json-rpc.workspace = true
-alloy-serde.workspace = true
 
 # optimism
 op-alloy-consensus = { workspace = true, optional = true }
@@ -45,11 +44,10 @@ thiserror.workspace = true
 
 # serialization
 serde = { workspace = true, features = ["derive"], optional = true }
-serde_json = { workspace = true, optional = true }
 
 [features]
 default = ["serde"]
-serde = ["dep:serde", "dep:serde_json"]
+serde = ["dep:serde"]
 op = [
     "dep:serde",
     "dep:op-alloy-consensus",
