doc: change CODEOWNERS reviewers

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,45 +1,45 @@
-*                           @gakonst
-crates/blockchain-tree-api/ @rakita @rkrasiuk @mattsse @Rjected
-crates/blockchain-tree/     @rakita @rkrasiuk @mattsse @Rjected
-crates/chain-state/         @fgimenez @mattsse @rkrasiuk
-crates/chainspec/           @Rjected @joshieDo @mattsse
-crates/cli/                 @mattsse
-crates/consensus/           @rkrasiuk @mattsse @Rjected
-crates/e2e-test-utils/      @mattsse @Rjected
-crates/engine               @rkrasiuk @mattsse @Rjected
-crates/engine/              @rkrasiuk @mattsse @Rjected @fgimenez
-crates/era/                 @mattsse @RomanHodulak
-crates/errors/              @mattsse
-crates/ethereum-forks/      @mattsse @Rjected
-crates/ethereum/            @mattsse @Rjected
-crates/etl/                 @joshieDo @shekhirin
-crates/evm/                 @rakita @mattsse @Rjected
-crates/exex/                @shekhirin
-crates/net/                 @mattsse @Rjected
-crates/net/downloaders/     @rkrasiuk
-crates/node/                @mattsse @Rjected @klkvr
-crates/optimism/            @mattsse @Rjected @fgimenez
-crates/payload/             @mattsse @Rjected
-crates/primitives-traits/   @Rjected @RomanHodulak @mattsse @klkvr
-crates/primitives/          @Rjected @mattsse @klkvr
-crates/prune/               @shekhirin @joshieDo
-crates/ress                 @rkrasiuk
-crates/revm/                @mattsse @rakita
-crates/rpc/                 @mattsse @Rjected @RomanHodulak
-crates/stages/              @rkrasiuk @shekhirin
-crates/static-file/         @joshieDo @shekhirin
-crates/storage/codecs/      @joshieDo
-crates/storage/db-api/      @joshieDo @rakita
-crates/storage/db-common/   @Rjected
-crates/storage/db/          @joshieDo @rakita
-crates/storage/errors/      @rakita
-crates/storage/libmdbx-rs/  @rakita @shekhirin
-crates/storage/nippy-jar/   @joshieDo @shekhirin
-crates/storage/provider/    @rakita @joshieDo @shekhirin
-crates/storage/storage-api/ @joshieDo @rkrasiuk
-crates/tasks/               @mattsse
-crates/tokio-util/          @fgimenez
-crates/transaction-pool/    @mattsse
-crates/trie/                @rkrasiuk @Rjected @shekhirin @mediocregopher
-etc/                        @Rjected @shekhirin
-.github/                    @gakonst @DaniPopes
+*                           @joey0612
+crates/blockchain-tree-api/ @graceharuki @joey0612
+crates/blockchain-tree/     @graceharuki @joey0612
+crates/chain-state/         @graceharuki @joey0612
+crates/chainspec/           @graceharuki @joey0612
+crates/cli/                 @graceharuki @joey0612
+crates/consensus/           @graceharuki @joey0612
+crates/e2e-test-utils/      @graceharuki @joey0612
+crates/engine               @graceharuki @joey0612
+crates/engine/              @graceharuki @joey0612
+crates/era/                 @graceharuki @joey0612
+crates/errors/              @graceharuki @joey0612
+crates/ethereum-forks/      @graceharuki @joey0612
+crates/ethereum/            @graceharuki @joey0612
+crates/etl/                 @graceharuki @joey0612
+crates/evm/                 @graceharuki @joey0612
+crates/exex/                @graceharuki @joey0612
+crates/net/                 @graceharuki @joey0612
+crates/net/downloaders/     @graceharuki @joey0612
+crates/node/                @graceharuki @joey0612
+crates/optimism/            @graceharuki @joey0612
+crates/payload/             @graceharuki @joey0612
+crates/primitives-traits/   @graceharuki @joey0612
+crates/primitives/          @graceharuki @joey0612
+crates/prune/               @graceharuki @joey0612
+crates/ress                 @graceharuki @joey0612
+crates/revm/                @graceharuki @joey0612
+crates/rpc/                 @graceharuki @joey0612
+crates/stages/              @graceharuki @joey0612
+crates/static-file/         @graceharuki @joey0612
+crates/storage/codecs/      @graceharuki @joey0612
+crates/storage/db-api/      @graceharuki @joey0612
+crates/storage/db-common/   @graceharuki @joey0612
+crates/storage/db/          @graceharuki @joey0612
+crates/storage/errors/      @graceharuki @joey0612
+crates/storage/libmdbx-rs/  @graceharuki @joey0612
+crates/storage/nippy-jar/   @graceharuki @joey0612
+crates/storage/provider/    @graceharuki @joey0612
+crates/storage/storage-api/ @graceharuki @joey0612
+crates/tasks/               @graceharuki @joey0612
+crates/tokio-util/          @graceharuki @joey0612
+crates/transaction-pool/    @graceharuki @joey0612
+crates/trie/                @graceharuki @joey0612
+etc/                        @graceharuki @joey0612
+.github/                    @joey0612
