fix: forbid to use pending tag

--- a/crates/rpc/rpc-convert/Cargo.toml
+++ b/crates/rpc/rpc-convert/Cargo.toml
@@ -45,6 +45,9 @@ thiserror.workspace = true
 # serialization
 serde = { workspace = true, features = ["derive"], optional = true }
 
+# tracing
+tracing.workspace = true
+
 [features]
 default = ["serde"]
 serde = ["dep:serde"]
