feat: add check state consistency on startup

--- a/crates/node/builder/Cargo.toml
+++ b/crates/node/builder/Cargo.toml
@@ -58,6 +58,9 @@ reth-transaction-pool.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-node-ethstats.workspace = true
 
+## rust_eth_triedb
+rust-eth-triedb.workspace = true
+
 ## ethereum
 alloy-consensus.workspace = true
 alloy-primitives.workspace = true
