feat: rebase code to develop

--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -41,6 +41,9 @@ alloy-consensus.workspace = true
 revm-database.workspace = true
 revm-state = { workspace = true, optional = true }
 
+# rust-eth-triedb
+rust-eth-triedb.workspace = true
+
 # tracing
 tracing.workspace = true
 
