--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -36,6 +36,11 @@ reth-trie-sparse = { workspace = true, features = ["std", "metrics"] }
 reth-trie-sparse-parallel = { workspace = true, features = ["std"] }
 reth-trie.workspace = true
 
+# rust-eth-triedb-state-trie
+rust-eth-triedb-state-trie.workspace = true
+rust-eth-triedb.workspace = true
+rust-eth-triedb-pathdb.workspace = true
+
 # alloy
 alloy-evm.workspace = true
 alloy-consensus.workspace = true
@@ -64,6 +69,7 @@ rayon.workspace = true
 tracing.workspace = true
 derive_more.workspace = true
 parking_lot.workspace = true
+dashmap.workspace = true
 
 # optional deps for test-utils
 reth-prune-types = { workspace = true, optional = true }
