--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -65,7 +65,7 @@ reth-metrics = { workspace = true, features = ["common"] }
 
 # misc
 schnellru.workspace = true
-rayon.workspace = true
+rayon = { workspace = true, optional = true }
 tracing.workspace = true
 derive_more.workspace = true
 parking_lot.workspace = true
@@ -118,6 +118,8 @@ name = "state_root_task"
 harness = false
 
 [features]
+default = ["rayon"]
+rayon = ["dep:rayon"]
 test-utils = [
     "reth-chain-state/test-utils",
     "reth-chainspec/test-utils",
