--- a/Cargo.toml
+++ b/Cargo.toml
@@ -718,6 +718,16 @@ visibility = "0.1.1"
 walkdir = "2.3.3"
 vergen-git2 = "1.0.5"
 
+# Patch rust-eth-triedb's dependencies to use local reth crates
+[patch."https://github.com/joey0612/rust-eth-triedb.git"]
+reth-trie-common = { path = "crates/trie/common" }
+reth-metrics = { path = "crates/metrics" }
+
+# Also patch the git dependency directly
+[patch."https://github.com/bnb-chain/reth.git"]
+reth-trie-common = { path = "crates/trie/common" }
+reth-metrics = { path = "crates/metrics" }
+
 # [patch.crates-io]
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
