--- a/Cargo.toml
+++ b/Cargo.toml
@@ -723,6 +723,12 @@ vergen-git2 = "1.0.5"
 reth-trie-common = { path = "crates/trie/common" }
 reth-metrics = { path = "crates/metrics" }
 
+# Patch bnb-chain/reth.git dependencies to use local reth crates
+# This is needed because rust-eth-triedb depends on bnb-chain/reth.git
+[patch."https://github.com/bnb-chain/reth.git"]
+reth-trie-common = { path = "crates/trie/common" }
+reth-metrics = { path = "crates/metrics" }
+
 # [patch.crates-io]
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
