--- a/examples/custom-node/Cargo.toml
+++ b/examples/custom-node/Cargo.toml
@@ -16,7 +16,9 @@ reth-optimism-flashblocks.workspace = true
 reth-db-api.workspace = true
 reth-op = { workspace = true, features = ["node", "pool", "rpc"] }
 reth-payload-builder.workspace = true
+reth-primitives-traits.workspace = true
 reth-rpc-api.workspace = true
+reth-rpc-convert.workspace = true
 reth-engine-primitives.workspace = true
 reth-rpc-engine-api.workspace = true
 reth-ethereum = { workspace = true, features = ["node-api", "network", "evm", "pool", "trie", "storage-api", "provider"] }
@@ -36,7 +38,6 @@ alloy-rlp.workspace = true
 alloy-serde.workspace = true
 alloy-network.workspace = true
 alloy-rpc-types-engine.workspace = true
-alloy-rpc-types-eth.workspace = true
 op-alloy-consensus.workspace = true
 op-alloy-rpc-types-engine.workspace = true
 op-alloy-rpc-types.workspace = true
@@ -69,7 +70,6 @@ arbitrary = [
     "reth-ethereum/arbitrary",
     "alloy-rpc-types-engine/arbitrary",
     "reth-db-api/arbitrary",
-    "alloy-rpc-types-eth/arbitrary",
     "op-alloy-rpc-types/arbitrary",
 ]
 default = []
