--- a/Cargo.toml
+++ b/Cargo.toml
@@ -460,9 +460,11 @@ reth-ress-protocol = { path = "crates/ress/protocol" }
 reth-ress-provider = { path = "crates/ress/provider" }
 
 # triedb
-rust-eth-triedb = { git = "https://github.com/joey0612/rust-eth-triedb.git", branch = "integrate_reth" }
-rust-eth-triedb-common = { git = "https://github.com/joey0612/rust-eth-triedb.git", branch = "integrate_reth", package = "rust-eth-triedb-common" }
-rust-eth-triedb-state-trie = { git = "https://github.com/joey0612/rust-eth-triedb.git", branch = "integrate_reth", package = "rust-eth-triedb-state-trie" }
+# Note: To enable io-uring support, add `io-uring = ["rust-eth-triedb/io-uring"]` to the [features] section
+# of any crate that depends on rust-eth-triedb. Then enable the io-uring feature at the root (bin/reth).
+rust-eth-triedb = { git = "https://github.com/joey0612/rust-eth-triedb.git", branch = "main" }
+rust-eth-triedb-common = { git = "https://github.com/joey0612/rust-eth-triedb.git", branch = "main", package = "rust-eth-triedb-common" }
+rust-eth-triedb-state-trie = { git = "https://github.com/joey0612/rust-eth-triedb.git", branch = "main", package = "rust-eth-triedb-state-trie" }
 
 # revm
 revm = { version = "29.0.0", default-features = false }
