--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -115,6 +115,7 @@ name = "state_root_task"
 harness = false
 
 [features]
+io-uring = ["rust-eth-triedb/io-uring"]
 test-utils = [
     "reth-chain-state/test-utils",
     "reth-chainspec/test-utils",
