--- a/crates/trie/db/Cargo.toml
+++ b/crates/trie/db/Cargo.toml
@@ -51,6 +51,7 @@ serde_json.workspace = true
 similar-asserts.workspace = true
 
 [features]
+io-uring = ["rust-eth-triedb/io-uring"]
 metrics = ["reth-trie/metrics"]
 serde = [
     "similar-asserts/serde",
