--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -36,6 +36,9 @@ reth-trie-sparse = { workspace = true, features = ["std", "metrics"] }
 reth-trie-sparse-parallel = { workspace = true, features = ["std"] }
 reth-trie.workspace = true
 
+# triedb
+rust-eth-triedb.workspace = true
+
 # alloy
 alloy-evm.workspace = true
 alloy-consensus.workspace = true
@@ -112,6 +115,7 @@ name = "state_root_task"
 harness = false
 
 [features]
+io-uring = ["rust-eth-triedb/io-uring"]
 test-utils = [
     "reth-chain-state/test-utils",
     "reth-chainspec/test-utils",
