--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -57,6 +57,9 @@ reth-primitives-traits.workspace = true
 reth-discv4.workspace = true
 reth-discv5.workspace = true
 
+# triedb
+rust-eth-triedb.workspace = true
+
 # ethereum
 alloy-eips.workspace = true
 alloy-primitives.workspace = true
@@ -103,6 +106,7 @@ reth-ethereum-cli.workspace = true
 
 [features]
 default = []
+io-uring = ["rust-eth-triedb/io-uring"]
 arbitrary = [
     "dep:proptest",
     "dep:arbitrary",
