--- a/crates/node/builder/Cargo.toml
+++ b/crates/node/builder/Cargo.toml
@@ -82,6 +82,9 @@ fdlimit.workspace = true
 rayon.workspace = true
 serde_json.workspace = true
 
+## triedb
+rust-eth-triedb.workspace = true
+
 # tracing
 tracing.workspace = true
 
@@ -95,6 +98,7 @@ reth-evm-ethereum = { workspace = true, features = ["test-utils"] }
 
 [features]
 default = []
+io-uring = ["rust-eth-triedb/io-uring"]
 js-tracer = ["reth-rpc/js-tracer"]
 test-utils = [
     "dep:reth-db",
