--- a/crates/trie/common/Cargo.toml
+++ b/crates/trie/common/Cargo.toml
@@ -44,6 +44,10 @@ arbitrary = { workspace = true, features = ["derive"], optional = true }
 # misc
 rayon = { workspace = true, optional = true }
 
+# triedb dependencies (always available)
+rust-eth-triedb = { workspace = true }
+rust-eth-triedb-state-trie = { workspace = true }
+
 [dev-dependencies]
 reth-primitives-traits = { workspace = true, features = ["serde"] }
 reth-codecs.workspace = true
@@ -66,6 +70,7 @@ revm-state.workspace = true
 
 [features]
 default = ["std"]
+io-uring = ["rust-eth-triedb/io-uring"]
 std = [
     "alloy-consensus/std",
     "alloy-genesis/std",
