--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -76,6 +76,8 @@ asm-keccak = [
     "reth-primitives/asm-keccak",
     "reth-ethereum-cli/asm-keccak",
     "reth-node-ethereum/asm-keccak",
+    "reth-provider/asm-keccak",
+    "reth-node-builder/asm-keccak",
 ]
 
 # io-uring feature enables io-uring support for rust-eth-triedb
@@ -91,6 +93,8 @@ jemalloc = [
     "reth-node-core/jemalloc",
     "reth-node-metrics/jemalloc",
     "reth-ethereum-cli/jemalloc",
+    "reth-provider/jemalloc",
+    "reth-node-builder/jemalloc",
 ]
 jemalloc-prof = [
     "reth-cli-util/jemalloc",
