--- a/Cargo.toml
+++ b/Cargo.toml
@@ -464,6 +464,7 @@ reth-ress-provider = { path = "crates/ress/provider" }
 # of any crate that depends on rust-eth-triedb. Then enable the io-uring feature at the root (bin/reth).
 rust-eth-triedb = { git = "https://github.com/bnb-chain/reth-bsc-triedb.git", branch = "triedb_opt" }
 rust-eth-triedb-common = { git = "https://github.com/bnb-chain/reth-bsc-triedb.git", branch = "triedb_opt", package = "rust-eth-triedb-common" }
+rust-eth-triedb-pathdb = { git = "https://github.com/bnb-chain/reth-bsc-triedb.git", branch = "triedb_opt", package = "rust-eth-triedb-pathdb" }
 rust-eth-triedb-state-trie = { git = "https://github.com/bnb-chain/reth-bsc-triedb.git", branch = "triedb_opt", package = "rust-eth-triedb-state-trie" }
 
 # revm
