--- a/crates/chain-state/Cargo.toml
+++ b/crates/chain-state/Cargo.toml
@@ -43,6 +43,9 @@ parking_lot.workspace = true
 pin-project.workspace = true
 serde = { workspace = true, optional = true }
 
+# triedb
+rust-eth-triedb-common.workspace = true
+
 # optional deps for test-utils
 alloy-signer = { workspace = true, optional = true }
 alloy-signer-local = { workspace = true, optional = true }
