--- a/crates/optimism/rpc/Cargo.toml
+++ b/crates/optimism/rpc/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 # reth
 reth-evm.workspace = true
 reth-primitives-traits = { workspace = true, features = ["op"] }
+reth-rpc-convert.workspace = true
 reth-storage-api.workspace = true
 reth-rpc-eth-api = { workspace = true, features = ["op"] }
 reth-rpc-eth-types.workspace = true
