--- a/examples/custom-node/Cargo.toml
+++ b/examples/custom-node/Cargo.toml
@@ -15,6 +15,7 @@ reth-optimism-forks.workspace = true
 reth-optimism-flashblocks.workspace = true
 reth-db-api.workspace = true
 reth-op = { workspace = true, features = ["node", "pool", "rpc"] }
+reth-rpc-convert.workspace = true
 reth-payload-builder.workspace = true
 reth-rpc-api.workspace = true
 reth-engine-primitives.workspace = true
