--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,11 @@
 name: lint
 
 on:
-  pull_request:
-  merge_group:
-  push:
-    branches: [main]
+  workflow_dispatch: # disable action temporarily
+  # pull_request:
+  # merge_group:
+  # push:
+  #   branches: [main]
 
 env:
   CARGO_TERM_COLOR: always
