--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -3,12 +3,13 @@
 name: book
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-    types: [opened, reopened, synchronize, closed]
-  merge_group:
+  workflow_dispatch: # disable action temporarily
+  # push:
+  #   branches: [main]
+  # pull_request:
+  #   branches: [main]
+  #   types: [opened, reopened, synchronize, closed]
+  # merge_group:
 
 jobs:
   build:
