--- a/.github/workflows/sync-era.yml
+++ b/.github/workflows/sync-era.yml
@@ -4,8 +4,8 @@ name: sync-era test
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 */6 * * *"
+  # schedule:
+  #   - cron: "0 */6 * * *"
 
 env:
   CARGO_TERM_COLOR: always
