fix: insert block metrics

--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -28,6 +28,7 @@ reth-ethereum-primitives.workspace = true
 reth-provider.workspace = true
 reth-prune.workspace = true
 reth-revm.workspace = true
+reth-rpc-convert.workspace = true
 reth-stages-api.workspace = true
 reth-tasks.workspace = true
 reth-trie-db.workspace = true
