--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,10 +4,10 @@ name: integration
 
 on:
   workflow_dispatch: # disable action temporarily
-  # pull_request:
-  # merge_group:
-  # push:
-  #   branches: [main]
+  pull_request:
+  merge_group:
+  push:
+    branches: [main]
   # schedule:
   #   # Run once a day at 3:00 UTC
   #   - cron: "0 3 * * *"
@@ -24,8 +24,8 @@ jobs:
   test:
     name: test / ${{ matrix.network }}
     if: github.event_name != 'schedule'
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     env:
       RUST_BACKTRACE: 1
     strategy:
