--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,10 +4,10 @@ name: e2e
 
 on:
   workflow_dispatch: # disable action temporarily
-  # pull_request:
-  # merge_group:
-  # push:
-  #   branches: [main]
+  pull_request:
+  merge_group:
+  push:
+    branches: [main]
 
 env:
   CARGO_TERM_COLOR: always
@@ -26,6 +26,16 @@ jobs:
       RUST_BACKTRACE: 1
     timeout-minutes: 90
     steps:
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
       - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
       - uses: taiki-e/install-action@nextest
