--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -77,22 +77,22 @@ jobs:
           sudo apt update && sudo apt install gcc-multilib
           .github/assets/check_wasm.sh
 
-  riscv:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - uses: actions/checkout@v5
-      - uses: rui314/setup-mold@v1
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          target: riscv32imac-unknown-none-elf
-      - uses: taiki-e/install-action@cargo-hack
-      - uses: Swatinem/rust-cache@v2
-        with:
-          cache-on-failure: true
-      - uses: dcarbone/install-jq-action@v3
-      - name: Run RISC-V checks
-        run: .github/assets/check_rv32imac.sh
+  # riscv:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 60
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #     - uses: rui314/setup-mold@v1
+  #     - uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         target: riscv32imac-unknown-none-elf
+  #     - uses: taiki-e/install-action@cargo-hack
+  #     - uses: Swatinem/rust-cache@v2
+  #       with:
+  #         cache-on-failure: true
+  #     - uses: dcarbone/install-jq-action@v3
+  #     - name: Run RISC-V checks
+  #       run: .github/assets/check_rv32imac.sh
 
   crate-checks:
     runs-on: ubuntu-latest
