--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -3,13 +3,13 @@
 name: unit
 
 on:
-  workflow_dispatch: # disable action temporarily
-  # pull_request:
-  # merge_group:
-  # workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  workflow_dispatch:
+  pull_request:
+  merge_group:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 env:
   CARGO_TERM_COLOR: always
@@ -22,8 +22,8 @@ concurrency:
 jobs:
   test:
     name: test / ${{ matrix.type }} (${{ matrix.partition }}/${{ matrix.total_partitions }})
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     env:
       RUST_BACKTRACE: 1
     strategy:
@@ -50,6 +50,8 @@ jobs:
       - uses: actions/checkout@v5
       - uses: rui314/setup-mold@v1
       - uses: dtolnay/rust-toolchain@stable
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y clang libclang-dev llvm liburing-dev pkg-config
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -84,6 +86,8 @@ jobs:
           path: testing/ef-tests/ethereum-tests
           submodules: recursive
           fetch-depth: 1
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y clang libclang-dev llvm liburing-dev pkg-config
       - name: Download & extract EEST fixtures (public)
         shell: bash
         env:
