--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -69,8 +69,8 @@ jobs:
 
   state:
     name: Ethereum state tests
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     env:
       RUST_LOG: info,sync=error
       RUST_BACKTRACE: 1
@@ -106,8 +106,8 @@ jobs:
 
   doc:
     name: doc tests
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     env:
       RUST_BACKTRACE: 1
     timeout-minutes: 30
