--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -115,6 +115,8 @@ jobs:
       - uses: actions/checkout@v5
       - uses: rui314/setup-mold@v1
       - uses: dtolnay/rust-toolchain@stable
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y clang libclang-dev llvm liburing-dev pkg-config
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
