--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -46,6 +46,16 @@ jobs:
             total_partitions: 2
     timeout-minutes: 30
     steps:
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
       - uses: actions/checkout@v5
       - uses: rui314/setup-mold@v1
       - uses: dtolnay/rust-toolchain@stable
