--- a/.github/workflows/compact.yml
+++ b/.github/workflows/compact.yml
@@ -6,7 +6,7 @@
 # 4) deserialize previously generated test vectors
 
 on:
-  workflow_dispatch: # disable action temporarily
+  workflow_dispatch:
   pull_request:
   merge_group:
   push:
