--- a/.github/workflows/hive.yml
+++ b/.github/workflows/hive.yml
@@ -4,8 +4,8 @@ name: hive
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: "0 */6 * * *"
+  schedule:
+    - cron: "0 */6 * * *"
 
 env:
   CARGO_TERM_COLOR: always
@@ -24,8 +24,8 @@ jobs:
   prepare-hive:
     if: github.repository == 'paradigmxyz/reth'
     timeout-minutes: 45
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     steps:
       - uses: actions/checkout@v5
       - name: Checkout hive tests
@@ -146,8 +146,8 @@ jobs:
       - prepare-reth
       - prepare-hive
     name: run ${{ matrix.scenario.sim }}${{ matrix.scenario.limit && format(' - {0}', matrix.scenario.limit) }}
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     permissions:
       issues: write
     steps:
@@ -214,8 +214,8 @@ jobs:
   notify-on-error:
     needs: test
     if: failure()
-    runs-on:
-      group: Reth
+    runs-on: ubuntu-latest
+      # group: Reth
     steps:
       - name: Slack Webhook Action
         uses: rtCamp/action-slack-notify@v2
