--- a/.github/workflows/update-superchain.yml
+++ b/.github/workflows/update-superchain.yml
@@ -1,8 +1,8 @@
 name: Update Superchain Config
 
 on:
-  # schedule:
-  #   - cron: '0 3 * * 0'
+  schedule:
+    - cron: '0 3 * * 0'
   workflow_dispatch:
 
 permissions:
