chore: add branch

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
   merge_group:
   push:
-    branches: [main]
+    branches: [main, develop, ci-e2e]
   schedule:
     # Run once a day at 3:00 UTC
     - cron: "0 3 * * *"
